--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 services:
   app:
-    image: blinkker/hi-tech:0.0.1
+    image: blinkker/hi-tech:dev
     ports:
       - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://backend:1337/api
+      - NEXT_PUBLIC_MEDIA_URL=http://backend:1337
+      - NEXT_PUBLIC_BACKEND_HOST=backend
+      - NEXT_BACKEND_HOST=backend
+      - NEXT_BACKEND_PORT=1337
+      - NEXT_PUBLIC_BACKEND_PORT=1337
