--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "libphonenumber-js": "^1.12.23",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-intl": "^4.3.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
