--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   app:
     image: blinkker/hi-tech:dev
-    ports:
-      - "3000:3000"
+    # ports:
+    # - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://backend:1337/api
       - NEXT_PUBLIC_MEDIA_URL=http://backend:1337
@@ -10,3 +10,8 @@ services:
       - NEXT_BACKEND_HOST=backend
       - NEXT_BACKEND_PORT=1337
       - NEXT_PUBLIC_BACKEND_PORT=1337
+
+  # backend: ...
+  # db: ...
+  # worker:...
+  # nginx:...
